--- a/.gitattributes
+++ b/.gitattributes
@@ -17013,6 +17013,7 @@ utils/Makefile.fpc.fpcmake svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 utils/README.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/bin2obj.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/creumap.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+utils/data2inc.exm svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/data2inc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/debugsvr/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/debugsvr/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
