* Android: Reworked the startup code to use no assembly instructions. Generic assembler startup files contains only section data and are compiled for each CPU. * Android: argc and argv are correct for shared libraries.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@39905 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -9009,16 +9009,11 @@ rtl/amiga/timerd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dtype=nativ svn_e
 rtl/android/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/aarch64 svnc_bugtraq_003aurl svnc_bugtraq_003alogregex
-rtl/android/aarch64/dllprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/android/aarch64/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/aarch64/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/android/arm/dllprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/android/arm/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/arm/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/cwstring.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/dlandroid.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/android/i386/dllprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/android/i386/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/android/dllprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/i386/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/jvm/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/jvm/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -9028,9 +9023,8 @@ rtl/android/jvm/java_sys_android.inc svn_mime_002dtype=text%2Fplain svn_eol_002d
 rtl/android/jvm/java_sysh_android.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/jvm/rtl.cfg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/mipsel svnc_bugtraq_003aurl svnc_bugtraq_003alogregex
-rtl/android/mipsel/dllprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/android/mipsel/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/mipsel/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/android/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/sysandroid.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/sysandroidh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/unixandroid.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
