+ added support for x86_64-android target.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@39956 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -9028,6 +9028,8 @@ rtl/android/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/sysandroid.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/sysandroidh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/android/unixandroid.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/android/x86_64 svnc_bugtraq_003aurl svnc_bugtraq_003alogregex
+rtl/android/x86_64/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/arm/arm.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/arm/armdefines.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/arm/cpu.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
