* Enabled compilation of the cpu unit for arm-android and x86_64-android.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@39971 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/rtl/android/Makefile.fpc
+++ b/rtl/android/Makefile.fpc
@@ -65,8 +65,11 @@ SYSINIT_UNITS=
 
 LOADERS=prt0 dllprt0
 
+ifeq ($(findstring $(ARCH),i386 x86_64 arm),$(ARCH))
+CPU_UNITS=cpu
+endif
 ifeq ($(ARCH),i386)
-CPU_UNITS=cpu mmx
+CPU_UNITS+=mmx
 endif
 
 SYSTEMUNIT=system
