* Fix bug 0034429, replace now can use escape sequences, and lineending can be set
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@39993 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -7552,6 +7552,9 @@ packages/regexpr/src/oldregexpr.pp svn_mime_002dtype=text%2Fpascal svn_eol_002ds
 packages/regexpr/src/regex.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/regexpr/src/regexpr.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/regexpr/src/uregexpr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/regexpr/tests/tcregexp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/regexpr/tests/testregexpr.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/regexpr/tests/testregexpr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rexx/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rexx/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rexx/Makefile.fpc.fpcmake svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
