--- a/compiler/Makefile.fpc
+++ b/compiler/Makefile.fpc
@@ -908,9 +908,8 @@ else
         $(MAKE) $(addsuffix _exe_install,$(filter-out i8086,$(filter-out i386,$(filter-out $(PPC_TARGET),$(CYCLETARGETS))))) $(addsuffix _all,$(TARGET_DIRS))
 endif
         $(MAKE) $(addsuffix _install,$(TARGET_DIRS))
-	
-
-install: quickinstall
+        
+auxfilesinstall:
 ifndef CROSSINSTALL
 ifdef UNIXHier
         $(MKDIR) $(INSTALL_BASEDIR)
@@ -919,6 +918,10 @@ endif
         $(MKDIR) $(MSGINSTALLDIR)
         $(INSTALL) $(MSGFILES) $(MSGINSTALLDIR)
 endif
+	
+
+install: 
+	$(MAKE) quickinstall auxfilesinstall FPC=$(BASEDIR)/$(INSTALLEXEFILE)
 
 # This also installs a link from bin to the actual executable.
 # The .deb does that later.
