* make install shall not make assumptions about FPC, if one was provided
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40007 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -4528,7 +4528,11 @@ endif
 	$(INSTALL) $(MSGFILES) $(MSGINSTALLDIR)
 endif
 install: 
+ifndef FPC
 	$(MAKE) quickinstall auxfilesinstall FPC=$(BASEDIR)/$(INSTALLEXEFILE)
+else
+	$(MAKE) quickinstall auxfilesinstall
+endif
 installsymlink: install
 ifneq ($(PPCCPULOCATION),$(INSTALL_BINDIR))
 	$(MKDIR) $(INSTALL_BINDIR)
