pas2js: started nodepas2js
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40037 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -17518,6 +17518,8 @@ utils/pas2js/docs/translation.html svn_mime_002dtype=text%2Fhtml svn_eol_002dsty
 utils/pas2js/fpmake.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/pas2js/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/pas2js/httpcompiler.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+utils/pas2js/nodepas2js.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+utils/pas2js/nodepas2js.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/pas2js/pas2js.cfg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/pas2js/pas2js.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/pas2js/pas2js.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
