--- a/utils/pas2js/nodepas2js.lpi
+++ b/utils/pas2js/nodepas2js.lpi
@@ -39,7 +39,7 @@
       <Filename Value="nodepas2js.js" ApplyConventions="False"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
+      <IncludeFiles Value="$(ProjOutDir);../../packages/pastojs/src"/>
       <OtherUnitFiles Value="../../packages/fcl-js/src;../../packages/fcl-json/src;../../packages/fcl-passrc/src;../../packages/pastojs/src"/>
       <UnitOutputDirectory Value="js"/>
     </SearchPaths>
