pastojs: fixed handling read error
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40108 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/utils/pas2js/nodepas2js.lpi
+++ b/utils/pas2js/nodepas2js.lpi
@@ -59,7 +59,12 @@
       </Debugging>
     </Linking>
     <Other>
-      <CustomOptions Value="-Jeutf-8 -Jc"/>
+      <CustomOptions Value="-Jeutf-8
+-Jc
+-dVerboseFileCache"/>
+      <OtherDefines Count="1">
+        <Define0 Value="VerboseFileCache"/>
+      </OtherDefines>
       <CompilerPath Value="$(pas2js)"/>
     </Other>
   </CompilerOptions>
