Add explicit rtlclean/rtl targets in fullcycle rule if DOWPOCYCLE is set
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40114 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -4482,6 +4482,10 @@ fullcycle:
 	$(MAKE) distclean
 	$(MAKE) cycle
 	$(MAKE) ppuclean
+ifdef DOWPOCYCLE
+	$(MAKE) rtlclean
+	$(MAKE) rtl 'FPC=$(BASEDIR)/$(EXENAME)'
+endif
 ifndef EXCLUDE_80BIT_TARGETS
 	$(MAKE) $(filter-out $(PPC_TARGET),$(CYCLETARGETS)) 'FPC=$(BASEDIR)/$(EXENAME)'
 else
