pas2js: debug val() failure
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40144 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/utils/pas2js/nodepas2js.lpi
+++ b/utils/pas2js/nodepas2js.lpi
@@ -61,9 +61,15 @@
     <Other>
       <CustomOptions Value="-Jeutf-8
 -Jc
--dVerboseFileCache"/>
-      <OtherDefines Count="1">
+-dVerboseFileCache
+-dVerbosePasResolver
+-dVerbosePas2JS
+-dVerbosePasResEval"/>
+      <OtherDefines Count="4">
         <Define0 Value="VerboseFileCache"/>
+        <Define1 Value="VerbosePasResolver"/>
+        <Define2 Value="VerbosePas2JS"/>
+        <Define3 Value="VerbosePasResEval"/>
       </OtherDefines>
       <CompilerPath Value="$(pas2js)"/>
     </Other>
